[package]
name = "data-formats"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[dependencies]
jsonxf = "1.1"
egui = "0.24.1"
eframe = "0.24.1"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
log = "0.4"
influxdb-line-protocol = "1.0.0"
serde_json = "1.0.108"

